<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:tint="?android:attr/textColorPrimary"
            android:contentDescription="@string/main_content_description_implementation_image"
            app:srcCompat="@drawable/manong_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:text="@string/manong_app_name"
            style="@style/TextAppearance.Manong.Title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input"
            app:hintEnabled="true"
            style="@style/Widget.Manong.TextInputLayout"
            android:hint="@string/manong_hint_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            app:passwordToggleEnabled="true"
            style="@style/Widget.Manong.TextInputLayout"
            android:hint="@string/manong_hint_password"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                style="@style/Widget.Manong.TextView.Caption"
                android:text="@string/manong_text_forgot"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/login_progress"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="17dp"
                android:layout_marginEnd="17dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.github.florent37.shapeofview.shapes.CutCornerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/container_cut_button"
                android:layout_alignParentEnd="true"
                app:shape_cutCorner_bottomLeftSize="12dp"
                app:shape_cutCorner_bottomRightSize="12dp"
                app:shape_cutCorner_topLeftSize="12dp"
                app:shape_cutCorner_topRightSize="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:targetApi="lollipop">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/login_button"
                        style="@style/Widget.Manong.Button"
                        android:text="@string/manong_button_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </com.github.florent37.shapeofview.shapes.CutCornerView>

            <android.support.design.button.MaterialButton
                style="@style/Widget.Manong.Button.TextButton"
                android:id="@+id/register_button"
                android:layout_toStartOf="@id/container_cut_button"
                android:layout_marginEnd="12dp"
                android:text="@string/manong_button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
